# Stockxx

./: .gitignore  CMakeLists.txt  DJI.csv  LICENSE  PETR4_D.csv  StockxxDataTypes.h  StockxxDateUtils.h  calcdaemon.cpp  calcdaemon.h  candle.cpp  candle.h  candlemagnifier.cpp  candlemagnifier.h  channelstudie.cpp  customchart.cpp  customchart.h  customchart.ui  customdataserie.cpp  customdataserie.h  customdataseriecalc.cpp  customdataseriecalc.h  customindicatorcalc.cpp  customindicatorcalc.h  customindicatorvisual.cpp  customindicatorvisual.h  customprice.cpp  customprice.h  custompricecalc.cpp  custompricecalc.h  customserie.cpp  customserie.h  customstudie.cpp  customstudie.h  dailydataserie.cpp  dailydataserie.h  dailydataseriecalc.cpp  dailydataseriecalc.h  dailyprice.cpp  dailyprice.h  dataseriemanager.cpp  (+65 more)
source/: IndicatorDataTypes.h  StockxxDataTypes.h  StockxxDateUtils.h  StockxxUtils.h  candle.cpp  candle.h  colorutils.h  indicatorcalc.h  indicatormanager.cpp  indicatormanager.h  indicatorvisual.h  linesampleframe.cpp  linesampleframe.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pricecalc.cpp  pricecalc.h  pricevisual.cpp  pricevisual.h  stockxxlinecombobox.cpp  stockxxlinecombobox.h  stockxxlinecombobox.ui
source/alphaAPI/: alphaapi.txt  stockdataapi.h  symbolsearcher.cpp  symbolsearcher.h  symbolsearcher.ui  symbolseracherapi.cpp  symbolseracherapi.h  tickercompleter.cpp  tickercompleter.h
source/calc/: calcdaemon.cpp  calcdaemon.h
source/calc/customprice/: custompricecalc.cpp  custompricecalc.h  customseriecalc.cpp  customseriecalc.h
source/calc/dataseries/: customdataseriecalc.cpp  customdataseriecalc.h  dailydataseriecalc.cpp  dailydataseriecalc.h  minutedataseriecalc.cpp  minutedataseriecalc.h
source/calc/indicators/: bollingerbandscalc.cpp  bollingerbandscalc.h  customarrayindicatorcalc.cpp  customarrayindicatorcalc.h  customindicatorcalc.cpp  customindicatorcalc.h  movingaveragecalc.cpp  movingaveragecalc.h  priceindicatorcalc.cpp  priceindicatorcalc.h
source/customprice/: customprice.cpp  customprice.h  customserie.cpp  customserie.h  icustomserienotifiable.h
source/dataseries/: customdataserie.cpp  customdataserie.h  dailydataserie.cpp  dailydataserie.h  dataseriemanager.cpp  dataseriemanager.h  minutedataserie.cpp  minutedataserie.h
source/graphic/: candlemagnifier.cpp  candlemagnifier.h  customchart.cpp  customchart.h  customchart.ui  gotview.cpp  gotview.h  graphicmanager.cpp  graphicmanager.h  graphictitlebar.cpp  graphictitlebar.h  iglower.h  ivisualitem.h  priceguide.cpp  priceguide.h  pricescalevisual.cpp  pricescalevisual.h  timeguidevisual.cpp  timeguidevisual.h  timescalevisual.cpp  timescalevisual.h
source/indicators/: bollingerbands.cpp  bollingerbands.h  customarrayindicator.cpp  customarrayindicator.h  customindicator.cpp  customindicator.h  movingaverage.cpp  movingaverage.h  priceindicator.cpp  priceindicator.h
source/indicators/properties/: bollingerbandsproperties.cpp  bollingerbandsproperties.h  bollingerbandsproperties.ui  customindicatorproperties.cpp  customindicatorproperties.h  customindicatorproperties.ui  customindicatorstyleform.cpp  customindicatorstyleform.h  customindicatorstyleform.ui  movingaverageproperties.cpp  movingaverageproperties.h  movingaverageproperties.ui
source/indicators/visuals/: bollingerbandsvisual.cpp  bollingerbandsvisual.h  customvisualindicator.cpp  customvisualindicator.h  movingaveragevisual.cpp  movingaveragevisual.h  pricevisualindicator.cpp  pricevisualindicator.h
source/studies/: channelstudie.cpp  channelstudie.h  customstudie.cpp  customstudie.h  fibonaccistudie.cpp  fibonaccistudie.h  freehandstudie.cpp  freehandstudie.h  linestudie.cpp  linestudie.h  resistancestudie.cpp  resistancestudie.h  studieproperties.cpp  studieproperties.h  studieproperties.ui  vertlinestudie.cpp  vertlinestudie.h
